--- a/DayThree_Portfolio/Views/Shared/_Layout.cshtml
+++ b/DayThree_Portfolio/Views/Shared/_Layout.cshtml
@@ -6,6 +6,11 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+
+    <!--Syntax Highlighter-->
+    <link href="~/Scripts/SyntaxHighlighter/styles/shCore.css" rel="stylesheet" />
+    <link href="~/Scripts/SyntaxHighlighter/styles/shThemeDefault.css" rel="stylesheet" />
+
     <link href="~/Content/Custom.css" rel="stylesheet" />
 </head>
 <body>
@@ -133,7 +138,7 @@
                                             <input type="text" class="form-control" id="word1" placeholder="Enter a word">
                                         </div>
                                     </div>
-                                   
+
                                     <div class="form-group">
                                         <div class="col-sm-offset-2 col-sm-10">
                                             <br />
@@ -155,7 +160,7 @@
                                 <div class="col-md-4">
                                     <div id="palout" class="row">
                                         @*<p id="palout"></p>*@
-                                    </div>                                    
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -169,7 +174,7 @@
                         <div id="fizzbuzz" class="tab-pane fade">
                             <h3>FIZZ-BUZZ</h3>
                             <p id=""></p>
-                        </div>                        
+                        </div>
                     </div>
                 </div>
                 <div class="modal-footer">
@@ -194,6 +199,10 @@
 
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="~/Scripts/JSExercises.js"></script>
+
+    <!--Syntax Highlighter-->
+    <script src="~/Scripts/SyntaxHighlighter/scripts/shCore.js"></script>
+    <script src="~/Scripts/SyntaxHighlighter/scripts/shBrushJScript.js"></script>
 
     @RenderSection("scripts", required: false)
 </body>
