This is my most recent version with FizzBuzz coded up
I moved my CSS rules out to a new Custom css file and added colorization to the output

--- a/DayThree_Portfolio/Content/Custom.css
+++ b/DayThree_Portfolio/Content/Custom.css
@@ -4,3 +4,23 @@
     max-width: 300px;
 }
 
+.basicFB {
+font-weight: bold;
+    font-size:large;
+}
+.boldRed {   
+    color: red
+}
+
+.boldBlue { 
+    color: blue
+}
+
+.boldGreen {
+    color: green;
+}
+
+#fizzBuzzOut {
+    max-height: 100px;
+    overflow-y: auto;
+}
