--- a/DayThree_Portfolio/Views/Home/Index.cshtml
+++ b/DayThree_Portfolio/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
 
     <!-- Bootstrap Core CSS -->
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
-
+    
     <!-- Theme CSS -->
     <link href="~/Content/freelancer.min.css" rel="stylesheet" />
 
@@ -34,6 +34,18 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    @*<style>
+        p.eli{
+            display: none;
+        }
+
+        #btnCalc:hover p.eli{
+            display: block;
+        }
+    </style>*@
+
+    <link href="~/Content/Custom.css" rel="stylesheet" />
 
 </head>
 <body id="page-top" class="index">
@@ -103,7 +115,7 @@
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
+                                <i class="fa fa-search-plus fa-3x">Here is text</i>
                             </div>
                         </div>
                         <img src="~/img/portfolioImg1r2.jpeg" class="img-responsive" alt="">
@@ -582,34 +594,34 @@
                             </div>
                             <hr />
                             <div class="row">
-                                <div class="col-md-8">
+                                <div class="col-md-7">
                                     <div class="form-group">
-                                        <label class="control-label col-sm-3" for="num1">Enter number 1:</label>
-                                        <div class="col-sm-9">
+                                        <label class="control-label col-sm-5" for="num1">Enter number 1:</label>
+                                        <div class="col-sm-7">
                                             <input type="number" class="form-control" id="num1" placeholder="Enter number 1">
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label class="control-label col-sm-3" for="num2">Enter number 2:</label>
-                                        <div class="col-sm-9">
+                                        <label class="control-label col-sm-5" for="num2">Enter number 2:</label>
+                                        <div class="col-sm-7">
                                             <input type="number" class="form-control" id="num2" placeholder="Enter number 2">
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label class="control-label col-sm-3" for="num3">Enter number 3:</label>
-                                        <div class="col-sm-9">
+                                        <label class="control-label col-sm-5" for="num3">Enter number 3:</label>
+                                        <div class="col-sm-7">
                                             <input type="number" class="form-control" id="num3" placeholder="Enter number 3">
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label class="control-label col-sm-3" for="num4">Enter number 4:</label>
-                                        <div class="col-sm-9">
+                                        <label class="control-label col-sm-5" for="num4">Enter number 4:</label>
+                                        <div class="col-sm-7">
                                             <input type="number" class="form-control" id="num4" placeholder="Enter number 4">
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label class="control-label col-sm-3" for="num5">Enter number 5:</label>
-                                        <div class="col-sm-9">
+                                        <label class="control-label col-sm-5" for="num5">Enter number 5:</label>
+                                        <div class="col-sm-7">
                                             <input type="number" class="form-control" id="num5" placeholder="Enter number 5">
                                         </div>
                                     </div>
@@ -617,17 +629,29 @@
                                         <div class="col-sm-offset-2 col-sm-10">
                                             <br />
                                             <div class="btn-group">
-                                                <button id="btnCalc" type="button" class="btn btn-primary">Calculate</button>
+                                                <button id="btnCalc" type="button" class="btn btn-primary">Calculate
+                                                    <p class="eli">Here is some text!!!</p>
+                                                </button>
                                                 <div class="btn-group">
                                                     <button id="btnShowCode" type="button" class="btn btn-primary">
                                                         Show Code <span class="caret"></span>
-                                                    </button>                                                    
+                                                    </button>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
+
+                                    <div class="row">
+                                        <div class="col-md-offset-2 col-md-10">
+                                            <h4>
+                                                <span id="toggleSpan">Toggle On</span>
+                                                <span id="toggleIcon"><i class="fa fa-toggle-off"></i></span>
+                                            </h4>
+                                        </div>
+                                    </div>
+
                                 </div>
-                                <div class="col-md-4">
+                                <div class="col-md-5">
                                     <div class="row"><p id="output1"></p></div>
                                     <div class="row"><p id="output2"></p></div>
                                     <div class="row"><p id="output3"></p></div>
@@ -635,7 +659,7 @@
                                     <div class="row"><p id="output5"></p></div>
                                 </div>
                             </div>
-           
+
                             <br />
                             <div class="row" id="code">
                                 <div class="col-md-12">
@@ -722,8 +746,56 @@
                             <p id=""></p>
                         </div>
                         <div id="fizzbuzz" class="tab-pane fade">
-                            <h3>FIZZ-BUZZ</h3>
-                            <p id=""></p>
+                            <hr />
+                            <div class="row text-center">
+                                <h2>Fizz-Buzz</h2>
+                                <h4>Please enter two numbers between 1 and 100 and I will perform the classic Fizz-Buzz operation to produce output.</h4>
+                            </div>
+                            <hr />
+                            <div class="row">
+                                <div class="col-md-8">
+                                    <div class="form-group">
+                                        <label class="control-label col-sm-3" for="fizz">Enter num 1:</label>
+                                        <div class="col-sm-9">
+                                            <input type="text" class="form-control" id="fizz" placeholder="Enter fizz num">
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="control-label col-sm-3" for="buzz">Enter num 2:</label>
+                                        <div class="col-sm-9">
+                                            <input type="text" class="form-control" id="buzz" placeholder="Enter buzz num">
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="col-sm-offset-2 col-sm-10">
+                                            <br />
+                                            <div class="btn-group">
+                                                <button id="btnFizzBuzz" type="button" class="btn btn-primary">Click Me</button>
+                                                <div class="btn-group">
+                                                    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+                                                        Show Code <span class="caret"></span>
+                                                    </button>
+                                                    <ul class="dropdown-menu" role="menu">
+                                                        <li><a href="#"><b>JS / jQuery</b></a></li>
+                                                        <li><a href="#"><b>CSS</b></a></li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="row">
+                                        <div id="fizzBuzzOut" class="col-md-12">                                            
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+
+
+
+
                         </div>
                     </div>
                 </div>
@@ -763,6 +835,8 @@
     <!-- Theme JavaScript -->
     <script src="~/Scripts/freelancer.min.js"></script>
     <script src="~/Scripts/JSExercises.js"></script>
+
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
     <script>
         SyntaxHighlighter.all();
